use tonic::{transport::Server, Request, Response, Status};

// This includes the generated code from wolfram_physics.proto
// The name 'wolfram_physics_simulator' comes from the package name in the .proto file
pub mod wolfram_physics_simulator {
    tonic::include_proto!("wolfram_physics_simulator");
}

// Import the generated server trait and message types
// The server trait is typically within a module named after the service (e.g., wolfram_physics_simulator_service_server)
use wolfram_physics_simulator::{
    wolfram_physics_simulator_service_server::{WolframPhysicsSimulatorService, WolframPhysicsSimulatorServiceServer},
    Atom, HypergraphState, InitializeRequest, InitializeResponse, Relation, RunRequest,
    SimulationEvent, SimulationStateUpdate, StepRequest, StepResponse, StopRequest, StopResponse,
    GetCurrentStateRequest,
};
use tokio_stream::wrappers::ReceiverStream; // Added import for ReceiverStream

// Define a struct that will implement our service
#[derive(Debug, Default)]
pub struct MyWolframPhysicsSimulator {}

// Implement the gRPC service trait for our struct
#[tonic::async_trait]
impl WolframPhysicsSimulatorService for MyWolframPhysicsSimulator {
    async fn initialize_simulation(
        &self,
        request: Request<InitializeRequest>,
    ) -> Result<Response<InitializeResponse>, Status> {
        println!("Got an initialize_simulation request: {:?}", request);
        // Placeholder implementation
        let response = InitializeResponse {
            success: true,
            message: "Initialization pending implementation".to_string(),
            initial_hypergraph_state: None, // Or some default empty state
        };
        Ok(Response::new(response))
    }

    async fn step_simulation(
        &self,
        request: Request<StepRequest>,
    ) -> Result<Response<StepResponse>, Status> {
        println!("Got a step_simulation request: {:?}", request);
        // Placeholder implementation
        let response = StepResponse {
            new_hypergraph_state: None, // Or some default empty state
            events_occurred: vec![],
            current_step_number: 0,
        };
        Ok(Response::new(response))
    }

    type RunSimulationStream = ReceiverStream<Result<SimulationStateUpdate, Status>>;

    async fn run_simulation(
        &self,
        request: Request<RunRequest>,
    ) -> Result<Response<Self::RunSimulationStream>, Status> {
        println!("Got a run_simulation request: {:?}", request);
        // Placeholder implementation: Create a dummy stream
        let (tx, rx) = tokio::sync::mpsc::channel(4); // Buffer of 4
        // In a real implementation, you would spawn a task to send updates to tx
        // For now, we'll just return an empty stream that closes immediately.
        // Example: Sending one immediate update then closing
        // tokio::spawn(async move {
        //     let state_update = SimulationStateUpdate {
        //         current_graph: Some(HypergraphState::default()),
        //         recent_events: vec![],
        //         step_number: 0,
        //     };
        //     tx.send(Ok(state_update)).await.unwrap();
        // });
        Ok(Response::new(ReceiverStream::new(rx)))
    }

    async fn stop_simulation(
        &self,
        request: Request<StopRequest>,
    ) -> Result<Response<StopResponse>, Status> {
        println!("Got a stop_simulation request: {:?}", request);
        // Placeholder implementation
        let response = StopResponse {
            success: true,
            message: "Stop simulation pending implementation".to_string(),
        };
        Ok(Response::new(response))
    }

    async fn get_current_state(
        &self,
        request: Request<GetCurrentStateRequest>,
    ) -> Result<Response<SimulationStateUpdate>, Status> {
        println!("Got a get_current_state request: {:?}", request);
        // Placeholder implementation
        let response = SimulationStateUpdate {
            current_graph: None, // Or some default empty state
            recent_events: vec![],
            step_number: 0,
        };
        Ok(Response::new(response))
    }
}

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    let addr = "[::1]:50051".parse()?;
    let simulator_service = MyWolframPhysicsSimulator::default();

    println!("WolframPhysicsSimulatorService listening on {}", addr);

    Server::builder()
        .add_service(WolframPhysicsSimulatorServiceServer::new(simulator_service))
        .serve(addr)
        .await?;

    Ok(())
}
